--- a/style.css
+++ b/style.css
@@ -20,6 +20,27 @@ img {
 	user-select: none;
 }
 
+/* Animated Underline */
+.underline {
+	display: block;
+	width: max-content;
+	position: relative;
+}
+
+.underline::before {
+	content: '';
+	width: 0%;
+	position: absolute;
+	bottom: -1px;
+	height: 2px;
+	background-color: var(--underline-color);
+	transition: width 0.3s ease;
+}
+
+.underline:hover::before {
+	width: 100%;
+}
+
 /* Nav */
 .nav {
 	display: grid;
@@ -41,10 +62,7 @@ img {
 	font-weight: 400;
 	color: #505050;
 	font-size: 16px;
-}
-
-.nav .link:hover {
-	text-decoration: underline;
+	--underline-color: #505050;
 }
 
 /* Header */
@@ -176,6 +194,7 @@ p {
 	text-decoration: none;
 	font-size: 14px;
 	margin-bottom: 20px;
+	--underline-color: #1881F2;
 }
 
 .project-card .logos {
