--- a/style.css
+++ b/style.css
@@ -292,6 +292,11 @@ p {
 	grid-template-rows: repeat(4, min-content) auto min-content;
 	gap: 5px;
 	padding: 10px 15px;
+	transition: 0.15s ease;
+}
+
+.project-card:hover {
+	transform: translateY(-10px);
 }
 
 .project-card h4 {
@@ -385,7 +390,7 @@ footer a {
 	color: #3b3b3b;
 	font-weight: 700;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 18px;
 	margin-bottom: 20px;
 	--underline-color: #3b3b3b;
 	margin: auto;
@@ -394,6 +399,7 @@ footer a {
 footer .copy {
 	grid-area: copy;
 	text-align: center;
+	font-size: 16px;
 }
 
 .nope {
@@ -403,7 +409,7 @@ footer .copy {
 	align-items: center;
 }
 
-.nope:hover::after {
+.nope::after {
 	content: "Work in progress";
 	position: absolute;
 	background-color: #DADADA;
@@ -412,6 +418,13 @@ footer .copy {
 	transform: translateY(calc((-40px - 100%)/2 - 5px)) translateX(-50%);
 	padding: 5px;
 	width: max-content;
+	opacity: 0;
+	pointer-events: none;
+	transition: 0.2s linear;
+}
+
+.nope:hover::after {
+	opacity: 1;
 }
 
 /* Cloud */
